# poetry-gpt

./: .gitignore  README.md  poetry.py  pyproject.toml
data/: __init__.py  dataset.py  loader.py  tokenizer.py
model/: __init__.py  activations.py  attention.py  embeddings.py  initialization.py  model_manager.py  normalization.py  rope.py  sampling.py  transformer.py  utils.py
tests/: test_data.py  test_initialization.py  test_integration.py  test_model.py  test_model_manager.py  test_sampling.py  test_tokenizer.py  test_training.py
training/: __init__.py  config.py  scheduler.py  trainer.py
