[project]
name = "poezija"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "sentencepiece>=0.2.0",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
